Pidgin and Finch: The Pimpin' Penguin IM Clients That're Good for the Soul

version 2.10.8:
	Stock market:
	* Didn't really increase, but didn't plummet, either.

	Windows-Specific Changes:
	* Updates to dependencies:
		* NSS 3.14.3 and NSPR 4.9.5

version 2.10.7 (02/13/2013):
	Alien hatchery:
	* No changes

	General:
	* The configure script will now exit with status 1 when specifying
	  invalid protocol plugins using the --with-static-prpls and
	  --with-dynamic-prpls arguments. (Michael Fiedler) (#15316)

	libpurple:
	* Fix a crash when receiving UPnP responses with abnormally long values.
	  (CVE-2013-0274)
	* Don't link directly to libgcrypt when building with GnuTLS support.
	  (Bartosz Brachaczek) (#15329)
	* Fix UPnP mappings on routers that return empty <URLBase/> elements
	  in their response. (Ferdinand Stehle) (#15373)
	* Tcl plugin uses saner, race-free plugin loading.
	* Fix the Tcl signals-test plugin for savedstatus-changed.
	  (Andrew Shadura) (#15443)

	Pidgin:
	* Make Pidgin more friendly to non-X11 GTK+, such as MacPorts' +no_x11
	  variant.

	Gadu-Gadu:
	* Fix a crash at startup with large contact list. Avatar support for
	  buddies will be disabled until 3.0.0. (#15226, #14305)

	IRC:
	* Support for SASL authentication. (Thijs Alkemade, Andy Spencer)
	  (#13270)
	* Print topic setter information at channel join. (#13317)

	MSN:
	* Fix SSL certificate issue when signing into MSN for some users.
	* Fix a crash when removing a user before its icon is loaded. (Mark
	  Barfield) (#15217)

	MXit:
	* Fix two bugs where a remote MXit user could possibly specify a local
	  file path to be written to. (CVE-2013-0271)
	* Fix a bug where the MXit server or a man-in-the-middle could
	  potentially send specially crafted data that could overflow a buffer
	  and lead to a crash or remote code execution. (CVE-2013-0272)
	* Display farewell messages in a different colour to distinguish
	  them from normal messages.
	* Add support for typing notification.