@@ -5,7 +5,7 @@
 #   <signal name="Changed">
 #       <arg name="new_value" type="b"/>
 #   </signal>
-
+from __future__ import print_function
 import re
 import sys
 
@@ -23,8 +23,8 @@ excluded = [\
 registerregex = re.compile("purple_signal_register[^;]+\"([\w\-]+)\"[^;]+(purple_marshal_\w+)[^;]+;")
 nameregex = re.compile('[-_][a-z]')
 
-print "/* Generated by %s.  Do not edit! */" % sys.argv[0]
-print "const char *dbus_signals = "
+print("/* Generated by %s.  Do not edit! */" % sys.argv[0])
+print("const char *dbus_signals = ")
 for match in registerregex.finditer(sys.stdin.read()):
     signal = match.group(1)
     marshal = match.group(2)
@@ -32,7 +32,7 @@ for match in registerregex.finditer(sys.stdin.read()):
         continue
 
     signal = nameregex.sub(lambda x:x.group()[1].upper(), '-'+signal)
-    print "\"    <signal name='%s'>\\n\""%signal
+    print("\"    <signal name='%s'>\\n\"" % signal)
 
     args = marshal.split('_')
     # ['purple', 'marshal', <return type>, '', args...]
@@ -52,9 +52,9 @@ for match in registerregex.finditer(sys.stdin.read()):
                 type = 't'
             elif arg == "BOOLEAN":
                 type = 'b'
-            print "\"      <arg type='%s'/>\\n\""%type
+            print("\"      <arg type='%s'/>\\n\"" % type)
 
-    print "\"    </signal>\\n\""
+    print("\"    </signal>\\n\"")
 
-print ";"
+print(";")
 
